@@ -13,9 +13,7 @@ import jakarta.validation.constraints.Null;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.*;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 
 import static io.snello.management.AppConstants.*;
 import static jakarta.ws.rs.core.Response.ok;
@@ -34,51 +32,49 @@ public class ApiServiceRs {
     @Context
     UriInfo uriInfo;
 
+    @Inject
+    SecurityContext securityContext;
+
     public ApiServiceRs() {
     }
 
 
     @GET
     @Path(TABLE_PATH_PARAM)
-    public Response list(@NotNull @PathParam("table") String table,
-                         @QueryParam(SORT_PARAM) String sort,
-                         @QueryParam(LIMIT_PARAM) String limit,
-                         @QueryParam(START_PARAM) String start) throws Exception {
-        if (sort != null)
-            Log.info(SORT_DOT_DOT + sort);
-        if (limit != null)
-            Log.info(LIMIT_DOT_DOT + limit);
-        if (start != null)
-            Log.info(START_DOT_DOT + start);
+    public Response list(@NotNull @PathParam("table") String table, @QueryParam(SORT_PARAM) String sort, @QueryParam(LIMIT_PARAM) String limit, @QueryParam(START_PARAM) String start) throws Exception {
+        if (sort != null) Log.info(SORT_DOT_DOT + sort);
+        if (limit != null) Log.info(LIMIT_DOT_DOT + limit);
+        if (start != null) Log.info(START_DOT_DOT + start);
         debug(GET.class.getName());
-        Integer l = limit == null ? 10 : Integer.valueOf(limit);
-        Integer s = start == null ? 0 : Integer.valueOf(start);
+        Metadata metadata = apiService.metadataWithFields(table);
+        int l = limit == null ? 10 : Integer.valueOf(limit);
+        int s = start == null ? 0 : Integer.valueOf(start);
         long count = apiService.count(table, uriInfo);
-        return ok(apiService.list(table, uriInfo.getQueryParameters(), sort, l, s))
-                .header(SIZE_HEADER_PARAM, "" + count)
-                .header(TOTAL_COUNT_HEADER_PARAM, "" + count).build();
+        return ok(apiService.list(table, uriInfo.getQueryParameters(), sort, l, s)).header(SIZE_HEADER_PARAM, "" + count).header(TOTAL_COUNT_HEADER_PARAM, "" + count).build();
     }
 
 
     @GET
     @Path(TABLE_PATH_PARAM + UUID_PATH_PARAM)
-    public Response fetch(@NotNull @PathParam("table") String table,
-                          @NotNull @PathParam("uuid") String uuid) throws Exception {
+    public Response fetch(@NotNull @PathParam("table") String table, @NotNull @PathParam("uuid") String uuid) throws Exception {
         debug(GET.class.getName());
         String key = apiService.table_key(table);
-        return ok(apiService.fetch(uriInfo.getQueryParameters(), table, uuid, key)).build();
+        Metadata metadata = apiService.metadataWithFields(table);
+        var result = apiService.fetch(uriInfo.getQueryParameters(), table, uuid, key);
+        if (metadata.api_protected) {
+            if (!result.get(metadata.username_field).equals(securityContext.getUserPrincipal().getName())) {
+                throw new Exception("Unauthorized");
+            }
+        }
+        return ok(result).build();
     }
 
 
     @GET
     @Path(TABLE_PATH_PARAM + UUID_PATH_PARAM + EXTRA_PATH_PARAM)
-    public Response get(@NotNull @PathParam("table") String table,
-                        @NotNull @PathParam("uuid") String uuid,
-                        @NotNull @PathParam("path") String path,
-                        @Null @QueryParam(SORT_PARAM) String sort,
-                        @Null @QueryParam(LIMIT_PARAM) String limit,
-                        @Null @QueryParam(START_PARAM) String start) throws Exception {
+    public Response get(@NotNull @PathParam("table") String table, @NotNull @PathParam("uuid") String uuid, @NotNull @PathParam("path") String path, @Null @QueryParam(SORT_PARAM) String sort, @Null @QueryParam(LIMIT_PARAM) String limit, @Null @QueryParam(START_PARAM) String start) throws Exception {
         debug(GET.class.getName());
+        Metadata metadata = apiService.metadataWithFields(table);
         if (path == null) {
             throw new Exception(MSG_PATH_IS_EMPTY);
         }
@@ -94,7 +90,16 @@ public class ApiServiceRs {
             if (pars.length > 1) {
                 return ok(apiService.fetch(uriInfo.getQueryParameters(), pars[0], pars[1], UUID)).build();
             } else {
-                return ok(apiService.list(pars[0], uriInfo.getQueryParameters(), sort, Integer.valueOf(limit), Integer.valueOf(start))).build();
+                MultivaluedMap<String, String> parametersMap = null;
+                if (uriInfo.getQueryParameters() != null) {
+                    parametersMap = uriInfo.getQueryParameters();
+                } else {
+                    parametersMap = new MultivaluedHashMap<>();
+                }
+                if (metadata.api_protected) {
+                    parametersMap.put(metadata.username_field, List.of(securityContext.getUserPrincipal().getName()));
+                }
+                return ok(apiService.list(pars[0], parametersMap, sort, Integer.valueOf(limit), Integer.valueOf(start))).build();
             }
         } else {
             MultivaluedMap<String, String> parametersMap = null;
@@ -103,8 +108,8 @@ public class ApiServiceRs {
             } else {
                 parametersMap = null;
             }
-            parametersMap.put(table + "_id", Arrays.asList(new String[]{uuid}));
-            parametersMap.put("join_table", Arrays.asList(new String[]{table + "_" + path}));
+            parametersMap.put(table + "_id", Collections.singletonList(uuid));
+            parametersMap.put("join_table", List.of(table + "_" + path));
             return ok(apiService.list(path, parametersMap, sort, Integer.valueOf(limit), Integer.valueOf(start))).build();
         }
     }
@@ -112,10 +117,12 @@ public class ApiServiceRs {
 
     @POST
     @Path(TABLE_PATH_PARAM)
-    public Response post(Map<String, Object> map,
-                         @NotNull @PathParam("table") String table) throws Exception {
+    public Response post(Map<String, Object> map, @NotNull @PathParam("table") String table) throws Exception {
         Metadata metadata = apiService.metadataWithFields(table);
         String key = metadata.table_key;
+        if (metadata.api_protected) {
+            map.put(metadata.username_field, securityContext.getUserPrincipal().getName());
+        }
         TableKeyUtils.generateUUid(map, metadata, apiService);
         // CI VUOLE UNA TRANSAZIONE PER TENERE TUTTO INSIEME
         for (FieldDefinition fd : metadata.fields) {
@@ -143,9 +150,8 @@ public class ApiServiceRs {
 
     @PUT
     @Path(TABLE_PATH_PARAM + UUID_PATH_PARAM)
-    public Response put(Map<String, Object> map,
-                        @NotNull @PathParam("table") String table,
-                        @NotNull @PathParam("uuid") String uuid) throws Exception {
+    public Response put(Map<String, Object> map, @NotNull @PathParam("table") String table, @NotNull @PathParam("uuid") String uuid) throws Exception {
+        Metadata metadata = apiService.metadataWithFields(table);
         boolean renewSlug = TableKeyUtils.isSlug(apiService.metadata(table));
         String key = apiService.table_key(table);
         if (renewSlug) {
@@ -160,10 +166,13 @@ public class ApiServiceRs {
                 Log.info(" slug is the same!!");
             }
         }
+        if (metadata.api_protected) {
+            map.put(metadata.username_field, securityContext.getUserPrincipal().getName());
+        }
         // CI VUOLE UNA TRANSAZIONE PER TENERE TUTTO INSIEME
         map = apiService.merge(table, map, uuid, key);
         //DEVO ELIMINARE TUTTI I VALORI
-        Metadata metadata = apiService.metadataWithFields(table);
+
         for (FieldDefinition fd : metadata.fields) {
             if ("multijoin".equals(fd.type)) {
                 String join_table_name = metadata.table_name + "_" + fd.join_table_name;
@@ -189,13 +198,11 @@ public class ApiServiceRs {
 
     @DELETE
     @Path(TABLE_PATH_PARAM + UUID_PATH_PARAM)
-    public Response delete(@NotNull @PathParam("table") String table,
-                           @NotNull @PathParam("uuid") String uuid) throws Exception {
+    public Response delete(@NotNull @PathParam("table") String table, @NotNull @PathParam("uuid") String uuid) throws Exception {
         debug(DELETE.class.getName());
         String key = apiService.table_key(table);
         boolean result = apiService.delete(table, uuid, key);
-        if (result)
-            return ok().build();
+        if (result) return ok().build();
         return serverError().build();
     }
 
